# globalemu-mittal

./: .gitignore  README.rst  pyproject.toml
.github/workflows/: CI.yml
globalemu/: eval.py  gui.py  gui_config.py  network.py  plotter.py  preprocess.py
tests/: test_download.py  test_gui_config.py  test_network.py  test_preprocess.py
