[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "globalemu"
version = "1.10.0"
description = "globalemu: Robust and Fast Global 21-cm Signal Emulation."
readme = "README.rst"
authors = [
    {name = "Harry T. J. Bevins", email = "htjb2@cam.ac.uk"}]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    'numpy',
    'tensorflow',
    'matplotlib',
    'Pillow'
]

classifiers=[
    'Intended Audience :: Science/Research',
    'Natural Language :: English',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Topic :: Scientific/Engineering',
    'Topic :: Scientific/Engineering :: Astronomy',
    'Topic :: Scientific/Engineering :: Physics',
]

[project.scripts]
globalemu = "globalemu.gui:main"


[project.optional-dependencies]
dev = [
    "pytest",
]
docs = [
    "sphinx",
    "sphinx_rtd_theme",
    "numpydoc",
    "packaging"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["globalemu*"]
